--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <link rel="stylesheet" href="./css/all.css" />
         <link rel="stylesheet" href="./css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <script src="./js/script.js"></script>
+    </body>
 </html>
