fontawesome has been found and linked

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shop Template</title>
-        <link rel="stylesheet" href="./css/all.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+            integrity="sha512-rqQltXRuHxtPWhktpAZxLHUVJ3Eombn3hvk9PHjV/N5DMUYnzKPC1i3ub0mEXgFzsaZNeJcoE0YHq0j/GFsdGg=="
+            crossorigin="anonymous"
+        />
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
+        <i class="fas fa-user"></i>
         <script src="./js/script.js"></script>
     </body>
 </html>
