navbar has been made

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
+        <nav class="navbar">
+            <div class="navbar-center">
+                <span class="nav-icon">
+                    <i class="fas fa-bars"></i>
+                </span>
+                <i class="fas fa-splotch"></i>
+                <div class="trolley-btn">
+                    <span class="nav-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                    </span>
+                    <div class="trolley-items">0</div>
+                </div>
+            </div>
+        </nav>
         <script src="./js/script.js"></script>
     </body>
 </html>
