header has been made

--- a/index.html
+++ b/index.html
@@ -13,20 +13,31 @@
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <nav class="navbar">
-            <div class="navbar-center">
-                <span class="nav-icon">
-                    <i class="fas fa-bars"></i>
-                </span>
-                <i class="fas fa-splotch"></i>
-                <div class="trolley-btn">
+        <div class="wrapper">
+            <nav class="navbar">
+                <div class="navbar-center">
                     <span class="nav-icon">
-                        <i class="fas fa-shopping-cart"></i>
+                        <i class="fas fa-bars"></i>
                     </span>
-                    <div class="trolley-items">0</div>
+                    <i class="fas fa-splotch"></i>
+                    <div class="trolley-btn">
+                        <span class="nav-icon">
+                            <i class="fas fa-shopping-cart"></i>
+                        </span>
+                        <div class="trolley-items">0</div>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+            <header class="hero">
+                <div class="banner">
+                    <h1 class="banner-title">
+                        We're selling everything you're looking for
+                    </h1>
+                    <button class="banner-btn">shop now</button>
+                </div>
+            </header>
+        </div>
+
         <script src="./js/script.js"></script>
     </body>
 </html>
