--- a/index.html
+++ b/index.html
@@ -36,6 +36,68 @@
                     <button class="banner-btn">shop now</button>
                 </div>
             </header>
+            <section class="products">
+                <div class="section-title">
+                    <h2>what we're selling</h2>
+                </div>
+                <div class="products-center">
+                    <article class="product">
+                        <div class="img-container">
+                            <img src="img/01.jpg" alt="" class="product-img" />
+                            <button class="bag-btn" data-id="1">
+                                <i class="fas fa-shopping-cart"></i>
+                                add to trolley
+                            </button>
+                        </div>
+                        <h3>cristmas tree</h3>
+                        <h4>$9.49</h4>
+                    </article>
+                    <article class="product">
+                        <div class="img-container">
+                            <img src="img/02.jpg" alt="" class="product-img" />
+                            <button class="bag-btn" data-id="1">
+                                <i class="fas fa-shopping-cart"></i>
+                                add to trolley
+                            </button>
+                        </div>
+                        <h3>cristmas tree</h3>
+                        <h4>$9.49</h4>
+                    </article>
+                    <article class="product">
+                        <div class="img-container">
+                            <img src="img/03.jpg" alt="" class="product-img" />
+                            <button class="bag-btn" data-id="1">
+                                <i class="fas fa-shopping-cart"></i>
+                                add to trolley
+                            </button>
+                        </div>
+                        <h3>cristmas tree</h3>
+                        <h4>$9.49</h4>
+                    </article>
+                    <article class="product">
+                        <div class="img-container">
+                            <img src="img/04.jpg" alt="" class="product-img" />
+                            <button class="bag-btn" data-id="1">
+                                <i class="fas fa-shopping-cart"></i>
+                                add to trolley
+                            </button>
+                        </div>
+                        <h3>cristmas tree</h3>
+                        <h4>$9.49</h4>
+                    </article>
+                    <article class="product">
+                        <div class="img-container">
+                            <img src="img/05.jpg" alt="" class="product-img" />
+                            <button class="bag-btn" data-id="1">
+                                <i class="fas fa-shopping-cart"></i>
+                                add to trolley
+                            </button>
+                        </div>
+                        <h3>cristmas tree</h3>
+                        <h4>$9.49</h4>
+                    </article>
+                </div>
+            </section>
         </div>
 
         <script src="./js/script.js"></script>
