some styles and new values

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                                 add to trolley
                             </button>
                         </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
+                        <h3>mobile phone</h3>
+                        <h4>$125.37</h4>
                     </article>
                     <article class="product">
                         <div class="img-container">
@@ -71,8 +71,8 @@
                                 add to trolley
                             </button>
                         </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
+                        <h3>bike</h3>
+                        <h4>117.25</h4>
                     </article>
                     <article class="product">
                         <div class="img-container">
@@ -82,8 +82,8 @@
                                 add to trolley
                             </button>
                         </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
+                        <h3>guitar</h3>
+                        <h4>$62.11</h4>
                     </article>
                     <article class="product">
                         <div class="img-container">
@@ -93,8 +93,8 @@
                                 add to trolley
                             </button>
                         </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
+                        <h3>suit</h3>
+                        <h4>$112.00</h4>
                     </article>
                 </div>
             </section>
