--- a/index.html
+++ b/index.html
@@ -50,54 +50,42 @@
                             </button>
                         </div>
                         <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/02.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="2">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>mobile phone</h3>
-                        <h4>$125.37</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/03.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="3">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>bike</h3>
-                        <h4>117.25</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/04.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="4">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>guitar</h3>
-                        <h4>$62.11</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/05.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="5">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>suit</h3>
-                        <h4>$112.00</h4>
+                        <h4>£9.49</h4>
                     </article>
                 </div>
             </section>
+            <div class="trolley-overlay">
+                <div class="trolley">
+                    <span class="close-trolley">
+                        <i class="fas fa-window-close"></i>
+                    </span>
+                    <h2>your trolley</h2>
+                    <div class="trolley-content">
+                        <div class="trolley-item">
+                            <img src="img/01.jpg" alt="product" />
+                            <div>
+                                <h4>christmas tree</h4>
+                                <h5>£9.49</h5>
+                                <span class="remove-item">remove</span>
+                            </div>
+                            <div>
+                                <i class="fas fa-chevron-up"></i>
+                                <p class="item-amount">1</p>
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="trolley-footer">
+                        <h3>
+                            your total: £
+                            <span class="trolley-total">0</span>
+                        </h3>
+                        <button class="clear-trolley banner-btn">
+                            clear trolley
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="./js/script.js"></script>
