--- a/index.html
+++ b/index.html
@@ -40,19 +40,7 @@
                 <div class="section-title">
                     <h2>what we're selling</h2>
                 </div>
-                <div class="products-center">
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/01.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="1">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>£9.49</h4>
-                    </article>
-                </div>
+                <div class="products-center"></div>
             </section>
             <div class="trolley-overlay">
                 <div class="trolley">
