--- a/index.html
+++ b/index.html
@@ -49,19 +49,7 @@
                     </span>
                     <h2>your trolley</h2>
                     <div class="trolley-content">
-                        <div class="trolley-item">
-                            <img src="img/01.jpg" alt="product" />
-                            <div>
-                                <h4>christmas tree</h4>
-                                <h5>£9.49</h5>
-                                <span class="remove-item">remove</span>
-                            </div>
-                            <div>
-                                <i class="fas fa-chevron-up"></i>
-                                <p class="item-amount">1</p>
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
+                        <!-- <div class="trolley-item"></div> -->
                     </div>
                     <div class="trolley-footer">
                         <h3>
