--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-
+        <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
