start the project from the scratch

--- a/index.html
+++ b/index.html
@@ -4,66 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shop Template</title>
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
-            integrity="sha512-rqQltXRuHxtPWhktpAZxLHUVJ3Eombn3hvk9PHjV/N5DMUYnzKPC1i3ub0mEXgFzsaZNeJcoE0YHq0j/GFsdGg=="
-            crossorigin="anonymous"
-        />
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <div class="wrapper">
-            <nav class="navbar">
-                <div class="navbar-center">
-                    <span class="nav-icon">
-                        <i class="fas fa-bars"></i>
-                    </span>
-                    <i class="fas fa-splotch"></i>
-                    <div class="trolley-btn">
-                        <span class="nav-icon">
-                            <i class="fas fa-shopping-cart"></i>
-                        </span>
-                        <div class="trolley-items">0</div>
-                    </div>
-                </div>
-            </nav>
-            <header class="hero">
-                <div class="banner">
-                    <h1 class="banner-title">
-                        We're selling everything you're looking for
-                    </h1>
-                    <button class="banner-btn">shop now</button>
-                </div>
-            </header>
-            <section class="products">
-                <div class="section-title">
-                    <h2>what we're selling</h2>
-                </div>
-                <div class="products-center"></div>
-            </section>
-            <div class="trolley-overlay">
-                <div class="trolley">
-                    <span class="close-trolley">
-                        <i class="fas fa-window-close"></i>
-                    </span>
-                    <h2>your trolley</h2>
-                    <div class="trolley-content">
-                        <!-- <div class="trolley-item"></div> -->
-                    </div>
-                    <div class="trolley-footer">
-                        <h3>
-                            your total: £
-                            <span class="trolley-total">0</span>
-                        </h3>
-                        <button class="clear-trolley banner-btn">
-                            clear trolley
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+        <div class="wrapper"></div>
         <script src="./js/script.js"></script>
     </body>
 </html>
