navbar has been made

--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shop Template</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+            integrity="sha512-rqQltXRuHxtPWhktpAZxLHUVJ3Eombn3hvk9PHjV/N5DMUYnzKPC1i3ub0mEXgFzsaZNeJcoE0YHq0j/GFsdGg=="
+            crossorigin="anonymous"
+        />
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
-        <div class="wrapper"></div>
+        <div class="wrapper">
+            <nav class="navbar">
+                <div class="navbar-center">
+                    <div class="nav-icon">
+                        <i class="fas fa-bars"></i>
+                    </div>
+                    <i class="fas fa-splotch"></i>
+                    <div class="trolley-btn">
+                        <span class="nav-icon">
+                            <i class="fas fa-shopping-cart"></i>
+                        </span>
+                        <div class="trolley-items">0</div>
+                    </div>
+                </div>
+            </nav>
+        </div>
         <script src="./js/script.js"></script>
     </body>
 </html>
