header has been made

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                     </div>
                 </div>
             </nav>
+            <header class="hero">
+                <div class="banner">
+                    <h1 class="banner-title">find out what we're selling</h1>
+                    <button class="banner-btn">Shop now</button>
+                </div>
+            </header>
         </div>
         <script src="./js/script.js"></script>
     </body>
