--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h2>what we're selling</h2>
                 </div>
                 <div class="products-center">
-                    <article class="product">
+                    <!-- <article class="product">
                         <div class="img-container">
                             <img src="img/01.jpg" alt="" class="product-img" />
                             <button class="bag-btn" data-id="1">
@@ -49,84 +49,7 @@
                         </div>
                         <h3>cristmas tree</h3>
                         <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/02.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="2">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/03.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="3">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/04.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="4">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/05.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="5">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/06.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="6">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/07.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="7">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
-                    <article class="product">
-                        <div class="img-container">
-                            <img src="img/08.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="8">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article>
+                    </article> -->
                 </div>
             </section>
             <div class="trolley-overlay">
