--- a/index.html
+++ b/index.html
@@ -58,21 +58,7 @@
                         <i class="fas fa-window-close"></i>
                     </span>
                     <h2>your trolley</h2>
-                    <div class="trolley-content">
-                        <div class="trolley-item">
-                            <img src="./img/01.jpg" alt="" />
-                            <div>
-                                <h4>rosary beads</h4>
-                                <h5>9.49</h5>
-                                <span class="remove-item">remove</span>
-                            </div>
-                            <div>
-                                <i class="fas fa-chevron-up"></i>
-                                <p class="item-amount">1</p>
-                                <i class="fas fa-chevron-down"></i>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="trolley-content"></div>
                     <div class="trolley-footer">
                         <h3>
                             your total: $ <span class="trolley-total">0</span>
