product cards have been redesigned

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h2>your trolley</h2>
                     <div class="trolley-content"></div>
                     <div class="trolley-footer">
-                        <h3>your total: <span class="trolley-total">0</span></h3>
+                        <h3>your total: <span class="trolley-total rub">0</span></h3>
                         <button class="clear-trolley banner-btn">clear trolley</button>
                     </div>
                 </div>
