--- a/index.html
+++ b/index.html
@@ -57,6 +57,99 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="burger">
+                            <div class="burger__icon icon-burger">
+                                <span></span>
+                            </div>
+                            <div class="burger__menu menu-burger">
+                                <ul class="menu-burger__list list-burger">
+                                    <li class="list-burger__logo">
+                                        <img src="./img/logo/logo-mobile.webp" alt="logo" />
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <div class="burger-info">
+                                            <div class="burger-info__top">
+                                                <a
+                                                    href="#!"
+                                                    class="
+                                                        burger-info__link burger-info__link_address
+                                                    "
+                                                >
+                                                    <img src="./img/burger/location.webp" alt="" />
+                                                    <span>улю Баррикадная, 16</span>
+                                                </a>
+                                            </div>
+                                            <div class="burger-info__bottom">
+                                                <a
+                                                    href="#!"
+                                                    class="
+                                                        burger-info__link burger-info__link_phone
+                                                    "
+                                                >
+                                                    <img src="./img/burger/phone.webp" alt="" />
+                                                    <span>8 (8422) 21-73-73</span>
+                                                </a>
+                                                <a
+                                                    href="#!"
+                                                    class="
+                                                        burger-info__link burger-info__link_login
+                                                    "
+                                                >
+                                                    <img src="./img/burger/login.webp" alt="" />
+                                                    <span>Войти</span>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <a href="#!" class="list-burger__link">Акции</a>
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <a href="#!" class="list-burger__link">Бонусы</a>
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <a href="#!" class="list-burger__link">Доставка</a>
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <a href="#!" class="list-burger__link">О компании</a>
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <a href="#!" class="list-burger__link">Контакты</a>
+                                    </li>
+                                    <li class="list-burger__item">
+                                        <div class="burger__bottom bottom-burger">
+                                            <div class="bottom-burger__first">
+                                                <a href="#!">
+                                                    vk
+                                                    <img src="./img/burger/vk.webp" alt="" />
+                                                </a>
+                                                <a href="#!">
+                                                    telegram
+                                                    <img src="./img/burger/telegram.webp" alt="" />
+                                                </a>
+                                                <a href="#!">
+                                                    ok
+                                                    <img src="./img/burger/OK.webp" alt="" />
+                                                </a>
+                                            </div>
+                                            <div class="bottom-burger__second">
+                                                <a href="#!">
+                                                    appstore
+                                                    <img src="./img/burger/appstore.webp" alt="" />
+                                                </a>
+                                                <a href="#!">
+                                                    googleplay
+                                                    <img
+                                                        src="./img/burger/googleplay.webp"
+                                                        alt=""
+                                                    />
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <nav class="navbar">
                         <div class="navbar-center">
@@ -92,8 +185,9 @@
                                     <a href="#!" class="nav__link">КОНТАКТЫ</a>
                                 </li>
                             </ul>
-                            <div class="trolley-btn">
+                            <div class="trolley-btn btn">
                                 <span class="nav-icon">
+                                    Корзина
                                     <i class="fas fa-shopping-cart"></i>
                                 </span>
                                 <div class="trolley-items">0</div>
