burger has been made

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                                     "
                                                 >
                                                     <img src="./img/burger/location.webp" alt="" />
-                                                    <span>улю Баррикадная, 16</span>
+                                                    <span>ул. Баррикадная, 16</span>
                                                 </a>
                                             </div>
                                             <div class="burger-info__bottom">
