dealing with product-items

--- a/index.html
+++ b/index.html
@@ -198,27 +198,62 @@
             </header>
 
             <section class="hero">
-                <div class="banner">
-                    <h1 class="banner-title">find out what we're selling</h1>
-                    <button class="banner-btn">Shop now</button>
+                <div class="hero__container container">
+                    <div class="swiper-container index-swiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="hero__content">
+                                    <img src="./img/s1/01.webp" alt="slide" />
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="hero__content">
+                                    <img src="./img/s1/01.webp" alt="slide" />
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="hero__content">
+                                    <img src="./img/s1/01.webp" alt="slide" />
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="hero__content">
+                                    <img src="./img/s1/01.webp" alt="slide" />
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="hero__content">
+                                    <img src="./img/s1/01.webp" alt="slide" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-button-prev">
+                            <img src="./img/s1/l.webp" alt="left" />
+                        </div>
+                        <div class="swiper-button-next">
+                            <img src="./img/s1/r.webp" alt="right" />
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="products">
-                <div class="section-title">
-                    <h2>what we're selling</h2>
-                </div>
-                <div class="products-center">
-                    <!-- <article class="product">
-                        <div class="img-container">
-                            <img src="img/01.jpg" alt="" class="product-img" />
-                            <button class="bag-btn" data-id="1">
-                                <i class="fas fa-shopping-cart"></i>
-                                add to trolley
-                            </button>
-                        </div>
-                        <h3>cristmas tree</h3>
-                        <h4>$9.49</h4>
-                    </article> -->
+                <div class="products__container container">
+                    <div class="section-title">
+                        <h2>Классические роллы</h2>
+                    </div>
+                    <div class="products-center">
+                        <!-- <article class="product">
+                            <div class="img-container">
+                                <img src="img/01.jpg" alt="" class="product-img" />
+                                <button class="bag-btn" data-id="1">
+                                    <i class="fas fa-shopping-cart"></i>
+                                    add to trolley
+                                </button>
+                            </div>
+                            <h3>cristmas tree</h3>
+                            <h4>$9.49</h4>
+                        </article> -->
+                    </div>
                 </div>
             </section>
             <div class="trolley-overlay">
@@ -235,6 +270,7 @@
                 </div>
             </div>
         </div>
+        <script src="./js/swiper-bundle.min.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
