product-cards are done

--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
                     <span class="close-trolley">
                         <i class="fas fa-window-close"></i>
                     </span>
-                    <h2>your trolley</h2>
+                    <h2>ваша корзина</h2>
                     <div class="trolley-content"></div>
                     <div class="trolley-footer">
-                        <h3>your total: <span class="trolley-total rub">0</span></h3>
-                        <button class="clear-trolley banner-btn">clear trolley</button>
+                        <h3>общая сумма: <span class="trolley-total rub">0</span></h3>
+                        <button class="clear-trolley banner-btn">очистить корзину</button>
                     </div>
                 </div>
             </div>
