firm section has been made

--- a/index.html
+++ b/index.html
@@ -256,6 +256,211 @@
                     </div>
                 </div>
             </section>
+            <section class="firm">
+                <div class="firm__container container">
+                    <h2 class="firm__headline">Фирменные роллы</h2>
+                    <div class="firm__cards cards-firm">
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels">
+                                    <div class="label label_new">
+                                        <span>NEW</span>
+                                    </div>
+                                    <div class="label label_hit">
+                                        <span>HIT</span>
+                                    </div>
+                                </div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels">
+                                    <div class="label label_hit">
+                                        <span>HIT</span>
+                                    </div>
+                                </div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels">
+                                    <div class="label label_new">
+                                        <span>NEW</span>
+                                    </div>
+                                </div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels">
+                                    <div class="label label_hit">
+                                        <span>HIT</span>
+                                    </div>
+                                </div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels"></div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels">
+                                    <div class="label label_new">
+                                        <span>NEW</span>
+                                    </div>
+                                    <div class="label label_hit">
+                                        <span>HIT</span>
+                                    </div>
+                                </div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels">
+                                    <div class="label label_hit">
+                                        <span>HIT</span>
+                                    </div>
+                                </div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="cards-firm__item">
+                            <article class="product">
+                                <div class="product__labels"></div>
+                                <a href="#!" class="product__img">
+                                    img
+                                    <img src="./img/s3/01.webp" alt="sushi" />
+                                </a>
+                                <div class="product__content">
+                                    <div class="product__title">
+                                        <h3>Акинава</h3>
+                                    </div>
+                                    <div class="product__text">
+                                        <p>Сыр творожный, креветка в кляре, огурец, тобико</p>
+                                    </div>
+                                    <div class="product__price price">
+                                        <span class="price_old rub">250</span>
+                                        <span class="price_current rub">210</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="trolley-overlay">
                 <div class="trolley">
                     <span class="close-trolley">
