--- a/index.html
+++ b/index.html
@@ -461,6 +461,56 @@
                     </div>
                 </div>
             </section>
+            <footer class="footer">
+                <div class="footer__container container">
+                    <div class="footer__column">
+                        <a href="#!" class="footer__title"> pdf-меню </a>
+                        <div class="footer__inner">
+                            <ul class="footer__list menubook">
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Фирменные роллы </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Запечённые роллы </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Классические роллы </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Темпурные роллы </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Сеты </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Суши </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Воки </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Тяхан </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Супы </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Салаты </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Соусы </a>
+                                </li>
+                                <li class="menubook__item">
+                                    <a href="#!" class="menubook__link"> Напитки </a>
+                                </li>
+                            </ul>
+                            <ul class="footer__list footer-links"></ul>
+                        </div>
+                    </div>
+                    <div class="footer__column"></div>
+                </div>
+                <div class="footer__rights rights"></div>
+            </footer>
             <div class="trolley-overlay">
                 <div class="trolley">
                     <span class="close-trolley">
