footer has been made

--- a/index.html
+++ b/index.html
@@ -504,12 +504,62 @@
                                     <a href="#!" class="menubook__link"> Напитки </a>
                                 </li>
                             </ul>
-                            <ul class="footer__list footer-links"></ul>
+                            <ul class="footer__list footer-links">
+                                <li class="footer-links__item">
+                                    <a href="#!" class="footer-links__link"> Акции и скидки </a>
+                                </li>
+                                <li class="footer-links__item">
+                                    <a href="#!" class="footer-links__link"> Доставка и оплата </a>
+                                </li>
+                                <li class="footer-links__item">
+                                    <a href="#!" class="footer-links__link"> Бонусная система </a>
+                                </li>
+                                <li class="footer-links__item">
+                                    <a href="#!" class="footer-links__link"> О компании </a>
+                                </li>
+                                <li class="footer-links__item">
+                                    <a href="#!" class="footer-links__link"> Вакансии </a>
+                                </li>
+                                <li class="footer-links__item">
+                                    <a href="#!" class="footer-links__link"> Контакты </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="footer__column"></div>
+                    <div class="footer__column">
+                        <div class="footer__headline">
+                            <img src="./img/footer/insta.webp" alt="instagram" />
+                            <img src="./img/footer/vk.webp" alt="vk" />
+                            <img src="./img/footer/ok.webp" alt="ok" />
+                        </div>
+                        <p class="footer__info">
+                            <span>sushibox.org</span>
+                            <span> +7 (8442) 27-73-73</span>
+                        </p>
+                        <div class="footer__app">
+                            <img src="./img/footer/appstore.webp" alt="appstore" />
+                            <img src="./img/footer/googleplay.webp" alt="googleplay" />
+                        </div>
+                    </div>
                 </div>
-                <div class="footer__rights rights"></div>
+                <div class="footer__rights rights">
+                    <div class="rights__container container">
+                        <div class="rights__column">
+                            <span>SushiBox 2013-2021</span>
+                            <span> Все права защищены</span>
+                        </div>
+                        <div class="rights__column">
+                            <a href="#!" class="rights__logo">
+                                logo
+                                <img src="./img/footer/logo-footer.webp" alt="logo" />
+                            </a>
+                        </div>
+                        <div class="rights__column rights__column_rules">
+                            <span>Правила оплаты товаров.</span>
+                            <span> Политика конфиденциальности</span>
+                        </div>
+                    </div>
+                </div>
             </footer>
             <div class="trolley-overlay">
                 <div class="trolley">
