think it is done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             integrity="sha512-rqQltXRuHxtPWhktpAZxLHUVJ3Eombn3hvk9PHjV/N5DMUYnzKPC1i3ub0mEXgFzsaZNeJcoE0YHq0j/GFsdGg=="
             crossorigin="anonymous"
         />
-        <!-- <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" /> -->
+        <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
